src/test/deca/syntax/invalid/whileSinCondition.deca

{
    float b = 2;
    while {
        b = b + 1.0;
    }
}